GUI-1472 fixed image_picker css, safari layout and did something predictable on small screens

--- a/eucaconsole/static/sass/includes/_landingpage.scss
+++ b/eucaconsole/static/sass/includes/_landingpage.scss
@@ -312,58 +312,69 @@ $dropdown-border-color: $euca-green;
 
 // landingpage header
 .lp-header {
+    display: -webkit-box;
     display: -webkit-box-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-flex-flow: row wrap;
+    -webkit-flex-flow: wrap;
     flex-flow: row wrap;
+    @media screen and (max-width: 600px) {
+        -webkit-flex-flow: column nowrap;
+        flex-flow: column nowrap;
+        align-items: center;
+    }
     -webkit-justify-content: space-between;
     justify-content: space-between;
 }
 
 .lp-action-buttons {
+    -webkit-box-ordinal-group: 1;
     -webkit-order: 1;
     -ms-flex-order: 1;
     order: 1;
+    -webkit-box-flex: 1 1 60%;
     -webkit-flex: 1 1 60%;
     flex: 1 1 60%;
 }
 
 .lp-sort {
+    -webkit-box-ordinal-group: 2;
     -webkit-order: 2;
     -ms-flex-order: 2;
     order: 2;
+    -webkit-box-flex: 0.3;
     -webkit-flex: 1 1 30%;
     flex: 1 1 30%;
 }
 
 .lp-view-buttons {
+    -webkit-box-ordinal-group: 3;
     -webkit-order: 3;
     -ms-flex-order: 3;
     order: 3;
+    -webkit-box-flex: 0.1;
     -webkit-flex: 0 0 10%;
     flex: 0 0 10%;
 }
 
 .lp-search {
-    -webkit-order: 4;
-    -ms-flex-order: 4;
-    order: 4;
+    -webkit-box-ordinal-group: 1;
+    -webkit-order: 1;
+    -ms-flex-order: 1;
+    order: 1;
+    -webkit-box-flex: 0.9;
     -webkit-flex: 0 0 90%;
     flex: 0 0 90%;
 }
 
 .lp-reload {
-    -webkit-order: 5;
-    -ms-flex-order: 5;
-    order: 5;
+    -webkit-box-ordinal-group: 2;
+    -webkit-order: 2;
+    -ms-flex-order: 2;
+    order: 2;
+    -webkit-box-flex: 0.1;
     -webkit-flex: 0 0 10%;
     flex: 0 0 10%;
-}
-
-@media screen and (max-width: 600px) {
-    -webkit-flex-flow: column nowrap;
-    flex-flow: column nowrap;
 }
 
 // tableview/gridview icon switcher
